--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 portable/logs/application.log
 portable/preferences.txt
 portable/cache/cache.json
+portable/package_index.json.sig
+portable/library_index.json.sig
+portable/library_index.json
+portable/cache/downloads.arduino.cc/packages/package_index.json.sig
+portable/cache/downloads.arduino.cc/libraries/library_index.json.sig
+portable/cache/downloads.arduino.cc/libraries/library_index.json.gz
+portable/cache/cache.json
+portable/preferences.txt
