--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+.vscode
 *.log
 portable/logs/application.log
 portable/preferences.txt
@@ -9,5 +9,6 @@ portable/library_index.json
 portable/cache/downloads.arduino.cc/packages/package_index.json.sig
 portable/cache/downloads.arduino.cc/libraries/library_index.json.sig
 portable/cache/downloads.arduino.cc/libraries/library_index.json.gz
+portable/cache/downloads.arduino.cc/*
 portable/cache/cache.json
 portable/preferences.txt
